.kube/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: libraryapp
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: libraryapp
    app.kubernetes.io/component: ingress
spec:
  rules:
    - host: 212.233.99.200.nip.io
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: gateway-service
               port:
                 name: http
